@@ -182,6 +182,7 @@ Lars Duening thanks:
      Nepomuck@UNItopia
      Nick Derewianka (nickd@e-media.com.au)
      Nico Ehemann (n.ehemann@wzl.rwth-aachen.de)
+     Niels Boehm (bohmmrwc@minet.uni-jena.de, Mariko@Regenbogen)
      Parsec
      Patrick May (patrick.may@cedelgroup.com)
      Paul Apgar (tiresius@usa.net, tiresius@Cosmos)
