@@ -22,12 +22,12 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 41)
-(Parent-Version lpmud 3-3 40)
-(Version-Log "Closures can be used as proper keys for mappings.")
+(Project-Version lpmud 3-3 42)
+(Parent-Version lpmud 3-3 41)
+(Version-Log "Oops, didn't compile in COMPAT mode.")
 (New-Version-Log
 "")
-(Checkin-Time "Sat, 14 Apr 2001 22:08:46 -0600")
+(Checkin-Time "Mon, 16 Apr 2001 21:43:17 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -59,8 +59,8 @@
   ;; Information about the driver and the distribution in general
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.3 644))
-  (CREDITS (lpmud/d/22_CREDITS 1.70.1.12 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.104 644))
+  (CREDITS (lpmud/d/22_CREDITS 1.70.1.13 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.105 644))
   (HISTORY (lpmud/f/49_HISTORY 1.164 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.9 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -69,7 +69,7 @@
   (src/configure (lpmud/d/0_configure 1.19.1.21 755))
   (src/config.h.in (lpmud/d/1_config.h 1.41.1.4.1.3 644))
   (src/machine.h.in (lpmud/b/9_machine.h. 1.9.1.2 644))
-  (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.22 644))
+  (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.23 644))
   (src/mkinstalldirs (lpmud/C/4_mkinstalld 1.1 644))
   (src/install-sh (lpmud/C/5_install-sh 1.2 644))
 
@@ -111,7 +111,7 @@
   (src/actions.h (lpmud/D/11_actions.h 1.6.1.3 644))
   (src/actions.c (lpmud/D/12_actions.c 1.15.1.18 644))
   (src/array.h (lpmud/f/47_array.h 1.18.1.12 644))
-  (src/array.c (lpmud/d/12_array.c 1.46.1.24 644))
+  (src/array.c (lpmud/d/12_array.c 1.46.1.25 644))
   (src/backend.h (lpmud/f/46_backend.h 1.20.1.3 644))
   (src/backend.c (lpmud/d/6_backend.c 1.68.1.23 644))
   (src/bitstrings.h (lpmud/I/47_bitstrings 1.1 644))
@@ -156,7 +156,7 @@
   (src/my-alloca.h (lpmud/f/29_my-alloca. 1.3.1.2 644))
   (src/my-rusage.h (lpmud/f/28_my-rusage. 1.6 644))
   (src/object.h (lpmud/44_object.h 1.34.1.6 644))
-  (src/object.c (lpmud/45_object.c 1.62.1.29 644))
+  (src/object.c (lpmud/45_object.c 1.62.1.30 644))
   (src/otable.h (lpmud/f/27_otable.h 1.8.1.4 644))
   (src/otable.c (lpmud/43_otable.c 1.22.1.3 644))
   (src/parser.c (lpmud/L/13_parser.c 1.1 644))
@@ -248,9 +248,9 @@
   (src/hosts/amiga/NetIncl/errno.h (lpmud/c/21_errno.h 1.1 644))
   (src/hosts/amiga/NetIncl/README (lpmud/c/22_README 1.1 644))
   (src/hosts/amiga/NetIncl/FILES (lpmud/c/23_FILES 1.1 644))
-  (src/hosts/amiga/Makefile (lpmud/c/24_Makefile 1.29.1.15 644))
+  (src/hosts/amiga/Makefile (lpmud/c/24_Makefile 1.29.1.16 644))
   (src/hosts/amiga/INSTALL (lpmud/c/25_INSTALL 1.2 644))
-  (src/hosts/amiga/DMakefile (lpmud/c/26_DMakefile 1.27.1.15 644))
+  (src/hosts/amiga/DMakefile (lpmud/c/26_DMakefile 1.27.1.16 644))
   (src/hosts/amiga/CHANGELOG (lpmud/c/27_CHANGELOG 1.2 644))
   (src/hosts/amiga/config.h-compat (lpmud/e/12_config.h-c 1.21.1.3 644))
   (src/hosts/amiga/amiga.h (lpmud/e/13_amiga.h 1.2 644))
@@ -277,7 +277,7 @@
   (src/hosts/be/config.h (lpmud/e/34_config.h 1.32.1.3 644))
   (src/hosts/be/be.h (lpmud/e/35_be.h 1.7 644))
   (src/hosts/be/beyacc (lpmud/I/39_beyacc 1.1 744))
-  (src/hosts/be/Makefile (lpmud/e/37_Makefile 1.60.1.35 644))
+  (src/hosts/be/Makefile (lpmud/e/37_Makefile 1.60.1.36 644))
   (src/hosts/be/icon-32x32.raw (lpmud/s/37_icon-32x32 1.1 644) :no-keywords)
   (src/hosts/be/icon-16x16.raw (lpmud/s/38_icon-16x16 1.1 644) :no-keywords)
   (src/hosts/be/driver.rsrc (lpmud/s/39_driver.rsr 1.1 644) :no-keywords)
@@ -296,7 +296,7 @@
   (src/hosts/os2/machine.h (lpmud/b/20_machine.h 1.6.1.1 644))
   (src/hosts/os2/config.h (lpmud/b/21_config.h 1.22.1.3 644))
   (src/hosts/os2/client.c (lpmud/b/22_client.c 1.2 644))
-  (src/hosts/os2/Makefile (lpmud/b/23_Makefile 1.24.1.15 644))
+  (src/hosts/os2/Makefile (lpmud/b/23_Makefile 1.24.1.16 644))
 
   ;; Host: Win32
   (src/hosts/win32/tubmud.bmp (lpmud/g/20_tubmud.bmp 1.1 644) :no-keywords)
