@@ -146,16 +146,16 @@ endif
 # $Format: "ifeq ($ReleaseType$, pre)"$
 ifeq (dev, pre)
 # $Format: "  SETVERFLAGS += d $ProjectMinorVersion$"$
-  SETVERFLAGS += d 41
+  SETVERFLAGS += d 42
 # $Format: "  VSTRING = $ReleaseMajor$.$ReleaseMinor$.$ReleaseMicro$-pre.$ProjectMinorVersion$"$
-  VSTRING = 3.3.0-pre.41
+  VSTRING = 3.3.0-pre.42
 endif
 # $Format: "ifeq ($ReleaseType$, dev)"$
 ifeq (dev, dev)
 # $Format: "  SETVERFLAGS += d $ProjectMinorVersion$"$
-  SETVERFLAGS += d 41
+  SETVERFLAGS += d 42
 # $Format: "  VSTRING = $ReleaseMajor$.$ReleaseMinor$.$ReleaseMicro$-dev.$ProjectMinorVersion$"$
-  VSTRING = 3.3.0-dev.41
+  VSTRING = 3.3.0-dev.42
 endif
 
 else
@@ -163,12 +163,12 @@ else
 # --- Development Versions ---
 
 # $Format: "SETVERFLAGS = -app $ReleaseMajor$ $ReleaseMinor$ $ProjectMinorVersion$"$
-SETVERFLAGS = -app 3 3 41
+SETVERFLAGS = -app 3 3 42
 
 # $Format: "  SETVERFLAGS += f"$
   SETVERFLAGS += f
 # $Format: "  VSTRING = $ReleaseMajor$.$ReleaseMinor$.$ProjectMinorVersion$"$
-  VSTRING = 3.3.41
+  VSTRING = 3.3.42
 
 endif
 
@@ -460,8 +460,8 @@ $(OBJ)/actions.o : ../mudlib/sys/driver_hook.h ../mudlib/sys/commands.h \
 
 $(OBJ)/array.o : xalloc.h wiz_list.h swap.h svalue.h simulate.h \
     stdstrings.h rxcache.h regexp.h object.h mstrings.h mempools.h \
-    mapping.h main.h interpret.h instrs.h backend.h array.h my-alloca.h \
-    typedefs.h driver.h strfuns.h sent.h exec.h port.h config.h \
+    mapping.h main.h interpret.h instrs.h closure.h backend.h array.h \
+    my-alloca.h typedefs.h driver.h strfuns.h sent.h exec.h port.h config.h \
     hosts/unix.h hosts/be/be.h hosts/amiga/amiga.h hosts/amiga/patchfloat.h \
     machine.h ./hosts/amiga/ixfile.h
 
